--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,10 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 #contents {
   width: 80%;
   margin: auto;
@@ -20,8 +24,21 @@
   font-size: 1.4rem;
 }
 
+.item_wrap:hover {
+  background-color: rgba(255, 153, 0, 0.475);
+}
+
 .item_contet {
   background-color: rgb(250, 250, 250);
   border-radius: 6px;
   padding: 0 20px;
+}
+
+#contet_wrap {
+  width: 80%;
+  margin: auto;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  padding: 20px;
+  font-size: 1.3rem;
 }
