編集と似た感じで、削除機能を作る

--- a/views/detail.erb
+++ b/views/detail.erb
@@ -8,3 +8,8 @@
 </div>
 
 <a id="edit_link" href="/edit/<%= @res['id'] %>">編集画面へ</a>
+
+<br>
+<br>
+
+<a id="delete_link" href="/delete/<%= @res['id'] %>">投稿を削除する  (´；ω；｀)</a>
