--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,3 +82,18 @@ input[type=submit] {
   padding-left: 20px;
   color: red;
 }
+
+#tags_area {
+  width: 80%;
+  margin: 20px auto;
+  background-color: rgb(223, 176, 96);
+  padding: 16px;
+  border-radius: 10px;
+}
+
+#tag_form {
+  padding: 10px;
+  margin: 4px 0;
+  border-bottom: 2px solid rgb(125, 125, 125);
+  font-size: 1.3rem;
+}
