--- a/views/signup.erb
+++ b/views/signup.erb
@@ -3,13 +3,13 @@
 
 <form action="/signup" method="POST">
   <label for="input_name">Neme： </label>
-  <input id="input_name" type="text" name="name"><br>
+  <input id="input_name" type="text" name="name" required><br>
   <label for="input_email">Email： </label>
-  <input id="input_email" type="text" name="email"><br>
+  <input id="input_email" type="email" name="email" required><br>
   <label for="input_pass">PASSWORD </label>
-  <input id="input_pass" type="password" name="pass"><br>
+  <input id="input_pass" type="password" name="pass" required><br>
   <label for="input_re_pass">Confirmation PASSWORD </label>
-  <input id="input_re_pass" type="password" name="confirmation"><br>
+  <input id="input_re_pass" type="password" name="confirmation" required><br>
   <input type="submit" value="送信">
 </form>
 
