--- a/views/login.erb
+++ b/views/login.erb
@@ -3,11 +3,11 @@
 
 <form action="/login" method="POST">
   <label for="input_name">Neme： </label>
-  <input id="input_name" type="text" name="name"><br>
+  <input id="input_name" type="text" name="name" required><br>
   <label for="input_email">Email： </label>
-  <input id="input_email" type="text" name="email"><br>
+  <input id="input_email" type="email" name="email" required><br>
   <label for="input_pass">PASSWORD </label>
-  <input id="input_pass" type="password" name="pass"><br>
+  <input id="input_pass" type="password" name="pass" required><br>
   <input type="submit" value="送信">
 </form>
 
